--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+tensorflow
+pexpect
 Flask
 Flask-RESTful
 Flask-JWT-Extended
@@ -5,3 +7,4 @@ Flask-SQLAlchemy
 gunicorn
 psycopg2
 psycopg2-binary
+
